cash: fixes POS-22, POS-21, POS-5. Added Cancel buttons to charge process and disable shell during shift end.

--- a/site/htdocs/avanty/style/cash.css
+++ b/site/htdocs/avanty/style/cash.css
@@ -43,10 +43,6 @@ input[name="shift-begin-amount"] {
 	width: 8ex;
 }
 
-#cash-park-rate {
-	
-}
-
 #cash-park-rate form {
 	flex-direction: row;
 }
